네이버 지도 API 설정 및 Second view에 로드

--- a/NEEDLE/Info.plist
+++ b/NEEDLE/Info.plist
@@ -53,5 +53,15 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    <key>LSApplicationCategoryType</key>
+    <string>NSLocationWhenInUseUsageDescription</string>
+    
+    
+    
 </dict>
 </plist>
