메인 페이지 스크롤되게 수정 3,4페이지 상단 탭바 구현 2페이지 현재 위치정보사용하여 위치 이동 구현

--- a/NEEDLE/Info.plist
+++ b/NEEDLE/Info.plist
@@ -60,6 +60,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>항상 위치정보를 사용하겠습니까?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용할 때 위치정보를 사용하겠습니까?</string>
 	<key>LSApplicationCategoryType</key>
 	<string>NSLocationWhenInUseUsageDescription</string>
 </dict>
