로그인 기능 개선 / GPS 위치 잡기 기능 구현 / 이벤트 추가페이지 구현 / 이벤트 페이지 (정보 부분) 구현

--- a/NEEDLE/Info.plist
+++ b/NEEDLE/Info.plist
@@ -64,6 +64,10 @@
 	<string>항상 위치정보를 사용하겠습니까?</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>사용할 때 위치정보를 사용하겠습니까?</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진첩에 접근을 허용하시겠습니까?</string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라에 접근을 허용하시겠습니까?</string>
 	<key>LSApplicationCategoryType</key>
 	<string>NSLocationWhenInUseUsageDescription</string>
 </dict>
