--- a/NEEDLE/Info.plist
+++ b/NEEDLE/Info.plist
@@ -70,5 +70,25 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb271861473341540</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>271861473341540</string>
+    <key>FacebookDisplayName</key>
+    <string>NEEDLE</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
